--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,12 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "future": "cpp",
+        "iostream": "cpp",
+        "list": "cpp",
+        "sstream": "cpp"
     }
 }
